lab1/Test/L1-A-13-38.output
Error Type A at Line 7
Error Type A at Line 9
Error Type B at Line 13
Error Type B at Line 22
