lab1/Test/L1-A-13-38.cmm
int DyK8cx ( float _i_MD6h3SUNV_FRDYR , struct MFM5PSJ7zFflIqiZWKN 
  zZcm9tGCY745a2KJ4 ) {
}
int RHBFhf8RJeOL , a3N35f8skNyZhee [ 1465554634 ] 

;
int #;
int K_7FuZComB8i6wObA ( ) {
  if ( FGfgmdU5NapQ5d )   if ( jjUHUnK_Rmde9 ) ~  luaWulIxnzMRt 
    ;
else   ALzwZrH13riaIvPQt ;

else   if LqyDutB )   aZM_BPCh1oY ;


  while ( PjXoEC75C3ASVi9GN ) {
  }
  if ( M7 )   return uW7PMT3UznIb ;

}
struct goQEqaaAmE {
  int > SYLH ;
  struct {
  }z_WnfDkpznBG5di76 , NRW3z1TOZU2 ;
  int fmQfndMI = GU2FzluLm37bjN7aLOc6 && VtE8jthw0tbzTmY 
    > asH * ! ( wJKNDqHeQbX = xCXbRa8 || f6 >= EAagUruov2mlHkI 
    - - l7jXHHdaZCsW [ THYDscAdCZ = fjgm9Yr7XAAlBLUYSL5 
    != fte1Zj + dbwX_4j9Ry23ULl ( hDDS4eJwlUOO4V == ( 
    i40T4sa_nC0so0T4XK [ DzIdluGW_3T7zX9v <= pbNfpSrCIaV 
    [ T5GyqvXodMwEgIks >= TpYT450ppRgKb4O * R3 [ - - - 
    - FauMz5n8nFgrdH ( i , GiJ69tXzf ) ] ] . qu8jhrC5Jt 
    ] ) + - Qt7oxGIUMUk < 2024342010.1329617835 / 248817894 
    ) / gjH1uRZNMxAkvwWq ( ) . jHlmLmS ] ) ;
};
